Generic panel, gradient style

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 
     <gradients.header></gradients.header>
 
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
+    <section class="container">
+      <div ng-view=""></div>
+    </section>
 
     <gradients.footer></gradients.footer>
 
@@ -46,10 +46,13 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/gradient.controller.js"></script>
 
         <script src="directives/directives.js"></script>
         <script src="directives/footer.directive.js"></script>
         <script src="directives/header.directive.js"></script>
+        <script src="directives/options.directive.js"></script>
+        <script src="directives/panel.directive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
