Gradient panel group

--- a/app/directives/genericPanel.html
+++ b/app/directives/genericPanel.html
@@ -1,4 +1,6 @@
 <div class="panel">
   <span class="panel-title">{{panelTitle}}</span>
-  <ng-transclude></ng-transclude>
+  <div class="content">
+    <ng-transclude></ng-transclude>
+  </div>
 </div>
