Gradient options view. In-progress

--- a/app/directives/panel.template.html
+++ b/app/directives/panel.template.html
@@ -1,6 +1,5 @@
 <div class="panel">
   <span class="panel-title">{{panelTitle}}</span>
-  <div class="content">
-    <ng-transclude></ng-transclude>
+  <div class="content" ng-transclude>
   </div>
 </div>
