--- a/app/directives/gradient.preview.template.html
+++ b/app/directives/gradient.preview.template.html
@@ -1,4 +1,9 @@
 <gradients.panel panel-title="Preview">
    Preview goes here
+    asdf
+    {{gradient.gradientStyle}}
+    {{gradient.linearGradientDirection}}
+    {{gradient.radialGradientPosition}}
 
+    {{gradient.radialGradientSize}}
 </gradients.panel>
