--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <script src="directives/gradients.preview.directive.js"></script>
         <script src="directives/gradients.stops.directive.js"></script>
         <script src="directives/buttonbar.directive.js"></script>
+        <script src="providers/gradients.constants.js"></script>
         <!-- endbuild -->
 </body>
 </html>
