--- a/app/directives/gradient.options.template.html
+++ b/app/directives/gradient.options.template.html
@@ -2,22 +2,22 @@
     <section class="gradient_selector">
       <span class="label">Gradient Style:</span>
       <div class="button_group">
-        <input type="radio" name="gradientType" value="linear" checked ng-model="gradientType">Linear</input>
-        <input type="radio" name="gradientType" value="radial" ng-model="gradientType">Radial</input>
+        <input type="radio" name="gradientType" value="{{::model.gradientStyles[0]}}" ng-click="gradient.gradientStyle = model.gradientStyles[0]" checked>{{::model.gradientStyles[0]}}</input>
+        <input type="radio" name="gradientType" value="{{::model.gradientStyles[1]}}" ng-click="gradient.gradientStyle = model.gradientStyles[1]">{{::model.gradientStyles[1]}}</input>
       </div>
     </section>
 
-    <section ng-show="gradientType == 'linear'">
-      <gradients.buttonbar selected-item-change="linearGradientTypeChanged(item)"
-              dataprovider="['to bottom right', 'to bottom', 'to bottom left', 'to right', 'to left', 'to top right', 'to top', 'to top left']"></gradients.buttonbar>
+    <section ng-show="gradient.gradientStyle == model.gradientStyles[0]">
+      <gradients.buttonbar selected-item-change="linearGradientTypeChanged"
+              dataprovider="{{::model.linearGradientDirections}}"></gradients.buttonbar>
     </section>
-    <section ng-show="gradientType == 'radial'">
+    <section ng-show="gradient.gradientStyle == model.gradientStyles[1]">
       <label>Gradients Position</label>
-        <gradients.buttonbar select-item-change="radialGradientPositionChange(item)"
-                             dataprovider="['top left', 'top center', 'top right', 'middle left', 'middle center', 'middle right', 'bottom left', 'bottom center', 'bottom right']"></gradients.buttonbar>
+        <gradients.buttonbar selected-item-change="radialGradientPositionChange"
+                             dataprovider="{{::model.radialGradientPositions}}"></gradients.buttonbar>
       <label>Sizes</label>
-        <gradients.buttonbar select-item-change="radialGradientSizeChange(item)"
-                             dataprovider="['closest-side', 'closest-corner', 'farthest-side', 'farthest-corner']"></gradients.buttonbar>
+        <gradients.buttonbar selected-item-change="radialGradientSizeChange"
+                             dataprovider="{{::model.radialGradientSizes}}"></gradients.buttonbar>
     </section>
 </gradients.panel>
 
