Add gradient preview

--- a/app/directives/gradient.preview.template.html
+++ b/app/directives/gradient.preview.template.html
@@ -1,9 +1,3 @@
-<gradients.panel panel-title="Preview">
-   Preview goes here
-    asdf
-    {{gradient.gradientStyle}}
-    {{gradient.linearGradientDirection}}
-    {{gradient.radialGradientPosition}}
-
-    {{gradient.radialGradientSize}}
+<gradients.panel panel-title="Preview" class="preview">
+    <div id="preview" ng-style="styleString" class="preview__canvas"></div>
 </gradients.panel>
