--- a/app/directives/gradient.stops.template.html
+++ b/app/directives/gradient.stops.template.html
@@ -1,4 +1,10 @@
-<gradients.panel panel-title="Gradient Stops">
+<gradients.panel class="gradient_stops" panel-title="Gradient Stops">
 
-    Gradient stops goes here
+    <div class="left_column">
+        left column
+    </div>
+    <div class="right_column clearfix">
+        right column
+    </div>
+
 </gradients.panel>
