--- a/app/directives/gradient.stops.template.html
+++ b/app/directives/gradient.stops.template.html
@@ -1,10 +1,40 @@
 <gradients.panel class="gradient_stops" panel-title="Gradient Stops">
+    <div class="table_wrapper">
+        <div class="column sm">
+            <div class="row">
 
-    <div class="left_column">
-        left column
+            </div>
+            <div class="row">
+                <span>Start:</span>
+            </div>
+            <div class="row">
+                <span>End:</span>
+            </div>
+        </div>
+        <div class="column">
+            <div class="row">
+                <span>Location:</span>
+            </div>
+            <div class="row input-group">
+                <input class="form-control" type="text" size="6" value="0">
+                <span class="input-group-addon">%</span>
+            </div>
+            <div class="row input-group">
+                <input class="form-control" type="text" size="6" value="0">
+                <span class="input-group-addon">%</span>
+            </div>
+        </div>
+        <div class="column clearfix">
+            <div class="row">
+                <span>Color:</span>
+            </div>
+            <div class="row">
+                <input class="input-lg">
+            </div>
+            <div class="row">
+                <input class="input-lg">
+            </div>
+        </div>
+        <a class="btn btn-primary" href="#">Add Stop</a>
     </div>
-    <div class="right_column clearfix">
-        right column
-    </div>
-
 </gradients.panel>
