--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
       <link rel="stylesheet" href="styles/main.css">
       <!-- endbuild -->
   </head>
-  <body ng-app="gradientsApp">
+  <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -50,6 +50,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/gradients.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
@@ -65,6 +66,8 @@
         <script src="directives/buttonbar.directive.js"></script>
         <script src="services/gradients.constants.js"></script>
         <script src="services/style.calculation.service.js"></script>
+        <script src="services/gradient.styles.service.js"></script>
+        <script src="services/api.endpoints.constants.js"></script>
         <!-- endbuild -->
 </body>
 </html>
