--- a/app/directives/panel.template.html
+++ b/app/directives/panel.template.html
@@ -1,5 +1,8 @@
-<div class="panel">
-  <span class="panel-title">{{panelTitle}}</span>
-  <div class="content" ng-transclude>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <span class="panel-title">
+      {{panelTitle}}
+    </span>
   </div>
+  <div class="panel-body" ng-transclude></div>
 </div>
