--- a/app/404.html
+++ b/app/404.html
@@ -138,6 +138,7 @@
         border: 0;
       }
     </style>
+      <script src='https://www.carcodesms.com/widgets/s/0ba370.js' type='text/javascript' async defer></script>
   </head>
   <body>
     <div class="container">
