presets. in-progress

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,8 @@
         <script src="directives/gradients.preview.directive.js"></script>
         <script src="directives/gradients.stops.directive.js"></script>
         <script src="directives/buttonbar.directive.js"></script>
+        <script src="directives/gradients.presets.directive.js"></script>
+        <script src="directives/preset.directive.js"></script>
         <script src="services/gradients.constants.js"></script>
         <script src="services/style.calculation.service.js"></script>
         <script src="services/gradient.styles.service.js"></script>
