--- a/app/test.html
+++ b/app/test.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-  <script src='https://smstesting.herokuapp.com/widgets/s/06ff8f.js' type='text/javascript' async defer></script>
+  <script src='https://www.carcodesms.com/widgets/2809.js'
+          type='text/javascript'></script>
+
 </head>
 <body>
 
