--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -500,15 +500,15 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
+    <script src="bower_components/jquery.parallax/jquery.parallax.js"></script>
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/imagesloaded/imagesloaded.js"></script>
     <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
     <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
     <script src="bower_components/wow/dist/wow.js"></script>
-    <script src="bower_components/easy-pie-chart/dist/jquery.easypiechart.js"></script>
-    <script src="bower_components/waypoints/lib/jquery.waypoints.js"></script>
-    <script src="bower_components/jquery-parallax/scripts/jquery.parallax-1.1.3.js"></script>
+    <script src="bower_components/jquery.easy-pie-chart/dist/jquery.easypiechart.js"></script>
+    <script src="bower_components/jquery-waypoints/lib/jquery.waypoints.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
