--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Works</a></li>
               <li><a href="#skills">Skills</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#testimonials">Playground</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
@@ -376,18 +376,6 @@
     </section>
 
     <!-- CallToAction end -->
-
-    <!-- Testimonials start -->
-
-    <section id="testimonials" class="pfblock pfblock-gray">
-
-
-
-
-    </section>
-
-    <!-- Testimonial end -->
-
 
     <!-- Contact start -->
 
