--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <!-- vendor -->
 
   </head>
-  <body>
+  <body ng-controller="gradients.MainController">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -59,12 +59,12 @@
 
           <div class="collapse navbar-collapse" id="custom-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Works</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#testimonials">Playground</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href ng-click="go('/', '#home')">Home</a></li>
+              <li><a href ng-click="go('/', '#services')">Services</a></li>
+              <li><a href ng-click="go('/', '#portfolio')">Works</a></li>
+              <li><a href ng-click="go('/', '#skills')">Skills</a></li>
+              <li><a href ng-click="go('/gradient')">Playground</a></li>
+              <li><a href ng-click="go('/', '#contact')">Contact</a></li>
             </ul>
           </div>
 
@@ -77,7 +77,8 @@
     <!-- Navigation end -->
 
     <!-- Home start -->
-
+    <div ng-switch on="pageName()">
+      <div ng-switch-when="/">
     <section id="home" class="pfblock-image screen-height">
       <div class="home-overlay"></div>
       <div class="intro">
@@ -463,14 +464,16 @@
     <div class="scroll-up">
       <a href="#home"><i class="fa fa-angle-up"></i></a>
     </div>
-
+      </div>
+      <section ng-switch-default class="container">
+        <div ng-view=""></div>
+      </section>
+    </div>
     <!-- Scroll to top end-->
 
     <!--<gradients.header></gradients.header>-->
 
-    <section class="container">
-      <div ng-view=""></div>
-    </section>
+
 
     <!--<gradients.footer></gradients.footer>-->
 
@@ -506,6 +509,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/gradient.controller.js"></script>
+        <script src="scripts/controllers/main.controller.js"></script>
 
         <script src="directives/directives.js"></script>
         <script src="directives/footer.directive.js"></script>
