Gradient code snippet.

--- a/app/index.html
+++ b/app/index.html
@@ -525,6 +525,8 @@
         <script src="services/style.calculation.service.js"></script>
         <script src="services/gradient.styles.service.js"></script>
         <script src="services/api.endpoints.constants.js"></script>
+        <script src="directives/gradients.markup.directive.js"></script>
+        <script src="services/style.calculation.factory.js"></script>
         <!-- endbuild -->
     <link href="app/styles/vendor/simple-line-icons.css" rel="stylesheet" media="screen">
     <link href="app/styles/rewrite/style.css" rel="stylesheet" media="screen">
