--- a/app/directives/buttonbar.template.html
+++ b/app/directives/buttonbar.template.html
@@ -3,6 +3,6 @@
             value="{{::item.name}}"
             type="button"
             class="btn flex-item"
-            ng-class="{'active': $index == 0, 'btn btn-default':true}"
+            ng-class="{'active': $index == 0, 'btn btn-default btn-lg':true}"
             ng-click="itemClicked($index)">{{::item.name}}</button>
 </div>
