--- a/app/directives/gradient.stops.template.html
+++ b/app/directives/gradient.stops.template.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <a class="btn btn-primary" href="" ng-click="addStop(event)">Add Stop</a>
+    <a class="btn btn-primary btn-lg" href="" ng-click="addStop(event)">Add Stop</a>
 
     </div>
 </gradients.panel>
