--- a/app/index.html
+++ b/app/index.html
@@ -528,8 +528,8 @@
         <script src="directives/gradients.markup.directive.js"></script>
         <script src="services/style.calculation.factory.js"></script>
         <!-- endbuild -->
-    <link href="app/styles/vendor/simple-line-icons.css" rel="stylesheet" media="screen">
-    <link href="app/styles/rewrite/style.css" rel="stylesheet" media="screen">
+    <link href="./styles/vendor/simple-line-icons.css" rel="stylesheet" media="screen">
+    <link href="./styles/rewrite/style.css" rel="stylesheet" media="screen">
     <script src="js/custom.js"></script>
 </body>
 </html>
