--- a/app/directives/gradient.preview.template.html
+++ b/app/directives/gradient.preview.template.html
@@ -1,3 +1,6 @@
 <gradients.panel panel-title="Preview" class="preview">
-    <div id="preview" style="{{styleString}}" class="preview__canvas"></div>
+	<div id="preview"
+		 style="{{styleString}}"
+		 class="preview__canvas">
+	</div>
 </gradients.panel>
