--- a/app/index.html
+++ b/app/index.html
@@ -24,11 +24,13 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
       <!-- build:css(.tmp) styles/main.css -->
       <link rel="stylesheet" href="styles/main.css">
+	  <link href="./styles/vendor/simple-line-icons.css" rel="stylesheet" media="screen">
+	  <link href="./styles/rewrite/style.css" rel="stylesheet" media="screen">
       <!-- endbuild -->
       <!-- vendor -->
 
   </head>
-  <body ng-controller="gradients.MainController">
+  <body id="mainBodyContainer" ng-controller="gradients.MainController">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -87,7 +89,7 @@
         <div class="start">creating modern and responsive Web Application</div>
       </div>
 
-      <a href="#services">
+      <a href ng-click="go('/', '#services')">
         <div class="scroll-down">
             <span>
                 <i class="fa fa-angle-down fa-2x"></i>
@@ -369,7 +371,7 @@
           </div>
 
           <div class="col-md-12 col-lg-12 calltoaction-btn wow slideInRight" data-wow-delay=".3s">
-            <a href="#contact" class="btn btn-lg">Hire Me</a>
+            <a href ng-click="go('/', '#contact')" class="btn btn-lg">Hire Me</a>
           </div>
 
         </div><!-- .row -->
@@ -440,16 +442,12 @@
           <div class="col-sm-12">
 
             <ul class="social-links">
-              <li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-              <li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-              <li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+              <li><a href="https://www.facebook.com/eugene.emelyanov.14" target="_blank" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
+              <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>-->
+              <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>-->
+              <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>-->
+              <li><a href="mailto:eugene.v.emelyanov@gmail.com?Subject=Looking%20for%20a%20freelancer&Body=Hello%20Eugene,%0D%0A%0D%0AI%20have%20something%20interesting%20for%20you,%20drop%20me%20a%20line%20back.%0D%0A%0D%0ACheers,%0D%0A" target="_top" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
             </ul>
-
-            <p class="heart">
-              Made with <span class="fa fa-heart fa-2x animated pulse"></span>
-            </p>
 
           </div>
 
@@ -462,7 +460,7 @@
     <!-- Scroll to top -->
 
     <div class="scroll-up">
-      <a href="#home"><i class="fa fa-angle-up"></i></a>
+      <a href ng-click="go('/', '#home')"><i class="fa fa-angle-up"></i></a>
     </div>
       </div>
       <section ng-switch-default class="container">
@@ -528,8 +526,6 @@
         <script src="directives/gradients.markup.directive.js"></script>
         <script src="services/style.calculation.factory.js"></script>
         <!-- endbuild -->
-    <link href="./styles/vendor/simple-line-icons.css" rel="stylesheet" media="screen">
-    <link href="./styles/rewrite/style.css" rel="stylesheet" media="screen">
     <script src="js/custom.js"></script>
 </body>
 </html>
