--- a/app/index.html
+++ b/app/index.html
@@ -498,6 +498,7 @@
     <script src="bower_components/wow/dist/wow.js"></script>
     <script src="bower_components/jquery.easy-pie-chart/dist/jquery.easypiechart.js"></script>
     <script src="bower_components/jquery-waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="bower_components/ng-stats/dist/ng-stats.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
