Adding server integration

--- a/app/directives/buttonbar.template.html
+++ b/app/directives/buttonbar.template.html
@@ -1,5 +1,5 @@
 <div class="button-group" role="group">
-	<button ng-repeat="item in ::items track by $index"
+	<button ng-repeat="item in ::dataprovider track by $index"
 			value="{{::item.name}}"
 			type="button"
 			class="btn flex-item"
