--- a/app/directives/gradient.preview.template.html
+++ b/app/directives/gradient.preview.template.html
@@ -3,4 +3,5 @@
 		 style="{{styleString}}"
 		 class="preview__canvas">
 	</div>
+	<div ng-click="" class="btn btn-lg">Save</div>
 </gradients.panel>
