--- a/app/index.html
+++ b/app/index.html
@@ -408,19 +408,19 @@
               <div class="ajax-hidden">
                 <div class="form-group wow fadeInUp">
                   <label class="sr-only" for="c_name">Name</label>
-                  <input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
+                  <input type="text" id="c_name" class="form-control" name="c_name" ng-model="message.name" placeholder="Name">
                 </div>
 
                 <div class="form-group wow fadeInUp" data-wow-delay=".1s">
                   <label class="sr-only" for="c_email">Email</label>
-                  <input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
+                  <input type="email" id="c_email" class="form-control" name="c_email" ng-model="message.email" placeholder="E-mail">
                 </div>
 
                 <div class="form-group wow fadeInUp" data-wow-delay=".2s">
-                  <textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Message"></textarea>
+                  <textarea class="form-control" id="c_message" name="c_message" rows="7" ng-model="message.message" placeholder="Message"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s">Send Message</button>
+                <button type="submit" class="btn btn-lg btn-block wow fadeInUp" ng-click="onSendMessage()" data-wow-delay=".3s">Send Message</button>
               </div>
               <div class="ajax-response"></div>
             </form>
@@ -526,6 +526,7 @@
         <script src="services/api.endpoints.constants.js"></script>
         <script src="directives/gradients.markup.directive.js"></script>
         <script src="services/style.calculation.factory.js"></script>
+		<script src="services/common.service.js"></script>
         <!-- endbuild -->
     <script src="js/custom.js"></script>
 </body>
