--- a/app/directives/gradient.presets.template.html
+++ b/app/directives/gradient.presets.template.html
@@ -1,10 +1,10 @@
 <gradients.panel panel-title="Gradient Presets" class="gradient-presets">
 	<div class="gradient-presets__container">
-		<div class="" ng-repeat="item in presetItems track by $index">
+		<div class="" ng-repeat="item in gradVM.presetItems track by $index">
 			<gradients.preset
 					preset-style="item"
-					gradient-type="gradient"
-					gradient-styles="data"
+					gradient-type="gradVM.gradient"
+					gradient-styles="gradVM.data"
 					on-preset-changed="setSelectedPreset"
 					class="gradient-presets__items">
 			</gradients.preset>
