--- a/app/directives/gradient.preview.template.html
+++ b/app/directives/gradient.preview.template.html
@@ -1,6 +1,6 @@
 <gradients.panel panel-title="Preview" class="preview">
 	<div id="preview"
-		 style="{{styleString}}"
+		 style="{{gradVM.styleString}}"
 		 class="preview__canvas">
 	</div>
 	<div ng-click="createPreset()" class="btn btn-lg">Save</div>
