--- a/app/directives/gradient.presets.template.html
+++ b/app/directives/gradient.presets.template.html
@@ -5,7 +5,7 @@
 					preset-style="item"
 					gradient-type="gradVM.gradient"
 					gradient-styles="gradVM.data"
-					on-preset-changed="setSelectedPreset"
+					on-preset-changed="gradVM.setSelectedPreset"
 					class="gradient-presets__items">
 			</gradients.preset>
 		</div>
