--- a/app/directives/gradients.markup.template.html
+++ b/app/directives/gradients.markup.template.html
@@ -1,3 +1,3 @@
 <gradients.panel panel-title="CSS Markup" class="gradients-markup">
-	<pre>{{styleString}}</pre>
+	<pre>{{gradVM.styleString}}</pre>
 </gradients.panel>
