Refactoring according to JohnPapa

--- a/app/directives/gradients/preview.template.html
+++ b/app/directives/gradients/preview.template.html
@@ -3,5 +3,5 @@
 		 style="{{gradVM.styleString}}"
 		 class="preview__canvas">
 	</div>
-	<div ng-click="createPreset()" class="btn btn-lg">Save</div>
+	<div ng-click="gradVM.createPreset()" class="btn btn-lg">Save</div>
 </gradients.panel>
