--- a/app/index.html
+++ b/app/index.html
@@ -517,25 +517,29 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/gradients.js"></script>
 <script src="scripts/app.js"></script>
+<!--controllers-->
 <script src="scripts/controllers/gradient.controller.js"></script>
 <script src="scripts/controllers/main.controller.js"></script>
-
+<!--common directives-->
 <script src="directives/directives.js"></script>
 <script src="directives/footer.directive.js"></script>
 <script src="directives/header.directive.js"></script>
-<script src="directives/gradient.options.directive.js"></script>
 <script src="directives/panel.directive.js"></script>
-<script src="directives/gradients.preview.directive.js"></script>
-<script src="directives/gradients.stops.directive.js"></script>
 <script src="directives/buttonbar.directive.js"></script>
-<script src="directives/gradients.presets.directive.js"></script>
-<script src="directives/preset.directive.js"></script>
+<script src="directives/colorpicker.directive.js"></script>
+<!-- gradient directives-->
+<script src="directives/gradients/directives.js"></script>
+<script src="directives/gradients/options.directive.js"></script>
+<script src="directives/gradients/preview.directive.js"></script>
+<script src="directives/gradients/stops.directive.js"></script>
+<script src="directives/gradients/presets.directive.js"></script>
+<script src="directives/gradients/preset.directive.js"></script>
+<script src="directives/gradients/markup.directive.js"></script>
+<!--services -->
 <script src="services/gradient.styles.service.js"></script>
 <script src="services/api.endpoints.constants.js"></script>
-<script src="directives/gradients.markup.directive.js"></script>
 <script src="services/style.calculation.factory.js"></script>
 <script src="services/common.service.js"></script>
-<script src="directives/colorpicker.directive.js"></script>
 <!-- endbuild -->
 <script src="js/custom.js"></script>
 </body>
