--- a/app/index.html
+++ b/app/index.html
@@ -520,6 +520,7 @@
 <!--controllers-->
 <script src="scripts/controllers/gradient.controller.js"></script>
 <script src="scripts/controllers/main.controller.js"></script>
+<script src="scripts/controllers/popup.controller.js"></script>
 <!--common directives-->
 <script src="directives/directives.js"></script>
 <script src="directives/footer.directive.js"></script>
@@ -536,10 +537,15 @@
 <script src="directives/gradients/preset.directive.js"></script>
 <script src="directives/gradients/markup.directive.js"></script>
 <!--services -->
-<script src="services/gradient.styles.service.js"></script>
-<script src="services/api.endpoints.constants.js"></script>
-<script src="services/style.calculation.factory.js"></script>
-<script src="services/common.service.js"></script>
+<script src="services/services.js"></script>
+<script src="services/api-endpoints.constants.js"></script>
+<script src="services/common-api.service.js"></script>
+<script src="services/modal.service.js"></script>
+<!-- gradient service -->
+<script src="services/gradient/services.js"></script>
+<script src="services/gradient/gradient-api.service.js"></script>
+<script src="services/gradient/style-calculation.service.js"></script>
+
 <!-- endbuild -->
 <script src="js/custom.js"></script>
 </body>
