--- a/app/test.html
+++ b/app/test.html
@@ -4,11 +4,7 @@
 
     <meta charset="UTF-8">
     <title></title>
-
-
-</head>
-<body>
-<script type="text/javascript">
+ <script type="text/javascript">
 (function(){
     var env = (function(){
     return !!(navigator.userAgent.match(/Android/i)
@@ -22,12 +18,12 @@
     if(env){
         var widgetName = "VYT";
         if(widgetName === "VYT"){
-            window._edw = {"account":"edcc9821", "data":{"edwpg":"mobile_dealer_vyt_widget", "edwcat":"mobile_dealer_site_vyt","edwsynpartner":"third_party_compact"}};
+            window._edw = {"account":"edcc9821", "data":{"edwpg":"mobile_dealer_vyt_widget", "edwcat":"mobile_dealer_site_vyt","edwsynpartner":"third_party_compact","loc_id":"903","name":"VYT"}};
         }else if(widgetName === "default_dealer_widget"){
-            window._edw = {"account":"edcc9821", "data":{"edwpg":"mobile_dealer_default_widget", "edwcat":"mobile_dealer_site_default_widget","edwsynpartner":"third_party_compact"}};
+            window._edw = {"account":"edcc9821", "data":{"edwpg":"mobile_dealer_default_widget", "edwcat":"mobile_dealer_site_default_widget","edwsynpartner":"third_party_compact","loc_id":"903","name":"default_dealer_widget"}};
         }
     }
-    window._edw = {"account":"edcc9821", "data":{"edwpg":"dealer_site_vyt_widget", "edwcat":"dealer_site_vyt","edwsynpartner":"third_party_site"}};
+    window._edw = {"account":"edcc9821", "data":{"edwpg":"dealer_site_vyt_widget", "edwcat":"dealer_site_vyt","edwsynpartner":"third_party_site","loc_id":"903","name":"VYT"}};
     var edw = document.createElement('script');
     edw.type = 'text/javascript';
     edw.async = true;
@@ -36,5 +32,8 @@
     s.parentNode.insertBefore(edw, s);
 })();
 </script>
+
+</head>
+<body>
 </body>
 </html>
