--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <!-- vendor -->
 </head>
 
-<body id="mainBodyContainer" ng-controller="gradients.MainController as main" wow>
+<body id="mainBodyContainer" ng-controller="gradients.MainController as main" wow init-app>
     <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
 	your browser</a> to improve your experience.</p>
@@ -390,6 +390,7 @@
     <script src="directives/colorpicker.directive.js"></script>
     <script src="directives/stickyelement.directive.js"></script>
     <script src="directives/wow.directive.js"></script>
+    <script src="directives/initapp.directive.js"></script>
     <!-- gradient directives-->
     <script src="directives/gradients/directives.js"></script>
     <script src="directives/gradients/options.directive.js"></script>
