--- a/app/index.html
+++ b/app/index.html
@@ -374,13 +374,14 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/gradients.js"></script>
+    <script src="scripts/app.bootstrap.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/app.routes.js"></script>
     <script src="scripts/apprun.js"></script>
     <!--controllers-->
-    <script src="scripts/controllers/gradient.controller.js"></script>
-    <script src="scripts/controllers/main.controller.js"></script>
-    <script src="scripts/controllers/popup.controller.js"></script>
+    <script src="controllers/gradient.controller.js"></script>
+    <script src="controllers/main.controller.js"></script>
+    <script src="controllers/popup.controller.js"></script>
     <!--common directives-->
     <script src="directives/directives.js"></script>
     <script src="directives/footer.directive.js"></script>
