--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,18 @@
                         <li><a href ng-click="main.navigateToPath('/', '#home')">Home</a></li>
                         <li><a href ng-click="main.navigateToPath('/', '#services')">Services</a></li>
                         <li><a href ng-click="main.navigateToPath('/', '#portfolio')">Works</a></li>
-                        <li><a href ng-click="main.navigateToPath('/', '#skills')">Skills</a></li>
-                        <li><a href ng-click="main.navigateToPath('/gradient')">Playground</a></li>
                         <li><a href ng-click="main.navigateToPath('/', '#contact')">Contact</a></li>
-                    </ul>
+                      
+                    </ul>   
+                    <div style="clear:both;" class="nav navbar-right navbar-nav">
+                        <div style="float:right;">
+                            <span>My playground projects:</span>
+                            <ul style="display:inline-block; list-style:none;">
+                                  <li><a href ng-click="main.navigateToPath('/gradient')">CSS Gradients</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <!-- .container -->
@@ -95,7 +103,7 @@
                                 <h2 class="pfblock-title">What can I help with</h2>
                                 <div class="pfblock-line"></div>
                                 <div class="pfblock-subtitle">
-                                    In order to have profitable business you need to do the right things. In order to do the right things you need to have the right stuff.
+                                    Things that I'm great at and love working with. 
                                 </div>
                             </div>
                         </div>
@@ -170,7 +178,7 @@
                                 <h2 class="pfblock-title">My works</h2>
                                 <div class="pfblock-line"></div>
                                 <div class="pfblock-subtitle">
-                                    No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+                                    Some of the works I've done
                                 </div>
                             </div>
                         </div>
@@ -209,51 +217,7 @@
                 <!-- .contaier -->
             </section>
             <!-- Portfolio end -->
-            <!-- Skills start -->
-            <section class="pfblock pfblock-gray" id="skills">
-                <div class="container">
-                    <div class="row skills">
-                        <div class="row">
-                            <div class="col-sm-6 col-sm-offset-3">
-                                <div class="pfblock-header wow fadeInUp">
-                                    <h2 class="pfblock-title">My Skills</h2>
-                                    <div class="pfblock-line"></div>
-                                    <div class="pfblock-subtitle">
-                                        No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- .row -->
-                        <div class="col-sm-6 col-md-3 text-center">
-                            <span data-percent="80" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">80</span>
-                            </span>
-                            <h3 class="text-center">HTML&CSS</h3>
-                        </div>
-                        <div class="col-sm-6 col-md-3 text-center">
-                            <span data-percent="85" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">85</span>
-                            </span>
-                            <h3 class="text-center">Angular.js</h3>
-                        </div>
-                        <div class="col-sm-6 col-md-3 text-center">
-                            <span data-percent="90" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">90</span>
-                            </span>
-                            <h3 class="text-center">Node.js</h3>
-                        </div>
-                        <div class="col-sm-6 col-md-3 text-center">
-                            <span data-percent="85" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">85</span>
-                            </span>
-                            <h3 class="text-center">mongodb</h3>
-                        </div>
-                    </div>
-                    <!--End row -->
-                </div>
-            </section>
-            <!-- Skills end -->
+           
             <!-- CallToAction start -->
             <section class="calltoaction">
                 <div class="container">
@@ -279,10 +243,10 @@
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-3">
                             <div class="pfblock-header">
-                                <h2 class="pfblock-title">Drop me a line</h2>
+                                <h2 class="pfblock-title">Let's work together</h2>
                                 <div class="pfblock-line"></div>
                                 <div class="pfblock-subtitle">
-                                    No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+                                    Let's build a relationship and see what we can achieve together! Send me a message to get the ball rolling, or network with me to keep up-to-date with what I'm working on.
                                 </div>
                             </div>
                         </div>
@@ -321,7 +285,8 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <ul class="social-links">
-                                <li><a href="https://www.facebook.com/eugene.emelyanov.14" target="_blank" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/eugene.emelyanov.14" target="_blank" data-wow-delay=".1s" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.linkedin.com/profile/view?id=AAIAAA2tK9EB-wsFai5_UHC9NAVGQARRwu4vvNE&trk=nav_responsive_tab_profile" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-linkedin"></i></a></li>
                                 <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>-->
                                 <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>-->
                                 <!--<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>-->
